# nsysbench

./: AGENTS.md  Cargo.toml  README.md
.github/workflows/: release-binaries.yml
docs/: BENCHMARKS.md
src/: main.rs
