[package]
name = "nsysbench"
version = "0.0.4"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
colored = "2.1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
